@@ -58,6 +58,10 @@ Notes about specific devices:
   not enough information how to tell them apart; if you have the second
   one, we badly need information (usb_modeswitch output with SCSI inquiry)
 
+- 1004:607f (LG KP500): switching message derived from report but untested
+
+- 1266:1000 (Royaltek Q110): switching method very likely but unconfirmed
+
 
 Legal
 =====
@@ -78,5 +82,5 @@ Or find it as the file COPYING in this folder.
 
 
 
-Last revised: 2010-04-18, Josua Dietze
+Last revised: 2010-06-21, Josua Dietze
 
