@@ -1,3 +1,14 @@
+20100623:
+    Huawei E173 was left out in previous release, add it again;
+    added BandLuxe C170 and C270 (now confirmed working)
+20100621 (with release 1.1.3):
+    added ZTE devices (MU351, MF110 variants, MF112, MF627);
+    added Sierra target IDs and Option devices (sync to kernel 2.6.34);
+    added LG L-05A, LG LUU-2100TI, LG KP500, Alcatel OT X220L, Olivetti Olicard
+    series, Huawei MTE WM610, Royaltek Q110, Rogers Rocket Stick;
+    changed most ZTE devices again to "eject" command with known specific
+    commands as second message; changed interface filter in rules file to
+    include "5" and "9" besides "0" (quirky devices)
 20100418 (with release 1.1.2):
     First version with proper ChangeLog; added Digicom 8E4455 (needs multiple
     commands, implemented in usb-modeswitch-1.1.2); added all other Pirelli
